Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13191

osp_sync_interpret() LBUG upon OST disk failure

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0, Lustre 2.12.5
    • Lustre 2.12.0
    • None
    • 3
    • 9223372036854775807

      Following assertion is seen:

      osp_sync_interpret()) ASSERTION( req->rq_transno == 0 || rc == -EIO || req->rq_import_generation < imp->imp_generation ) failed: transno 12895166334, rc -30, gen: req 1, imp 1
      

      Herein errno is EROFS, which is a possible errno but not taken into account.

            laisiyao Lai Siyao
            laisiyao Lai Siyao
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: